# gir2gapi

./: .gitignore  README  autogen.sh  configure.in  gir2gapi.csproj  gir2gapi.sln
src/: Alias.cs  Array.cs  AssemblyInfo.cs  Callback.cs  Class.cs  ClassStruct.cs  Constant.cs  Converter.cs  Ctor.cs  Enumeration.cs  Field.cs  Function.cs  GapiDocument.cs  GirDocument.cs  Interface.cs  Makefile.am  Mangler.cs  Method.cs  Namespace.cs  Parameter.cs  Parameters.cs  Property.cs  Record.cs  ReturnValue.cs  Signal.cs  SymbolTable.cs  Type.cs  VirtualMethod.cs  empty-api.xml  gir2gapi.in
